--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
+   "allure:gen": "allure generate ./allure-results --clean -o ./allure-report",
+    "allure:open": "allure open ./allure-report",
+    "test": "npm run cy:run && npm run allure:gen"
   },
   "keywords": [],
   "author": "Diego Gomes",
   "license": "ISC",
   "devDependencies": {
+    "@mmisty/cypress-allure-adapter": "^3.3.0",
     "ajv": "^8.17.1",
     "cypress": "^15.3.0"
   }
