--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -2,12 +2,12 @@ name: Cypress
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 permissions:
-  contents: write   # necessário para publicar no gh-pages
+  contents: write
 
 jobs:
   e2e:
@@ -22,47 +22,56 @@ jobs:
       - name: Install deps
         run: npm ci || npm i
 
+      # Debug opcional: lista suas pastas e specs
+      - name: List repo files (debug)
+        run: |
+          pwd
+          ls -la
+          echo "--- cypress-tests ---"
+          ls -R cypress-tests || true
+
+      # Roda Cypress (gera allure-results por causa do plugin)
       - name: Run Cypress
         uses: cypress-io/github-action@v6
         with:
           spec: "cypress-tests/e2e/**/*.cy.js"
 
+      # Gera HTML do Allure
       - name: Generate Allure Report
         run: |
           npx allure generate ./allure-results --clean -o ./allure-report
-          # cria .nojekyll para evitar problemas com diretórios que começam com underscore
           touch ./allure-report/.nojekyll
 
-      - name: Upload Allure Results (artifact)
+      # Guarda os artefatos (sempre útil para baixar)
+      - name: Upload Allure Results
         uses: actions/upload-artifact@v4
         with:
           name: allure-results
           path: allure-results
 
-      - name: Upload Allure HTML (artifact)
+      - name: Upload Allure Report (HTML)
         uses: actions/upload-artifact@v4
         with:
           name: allure-report
           path: allure-report
 
   deploy-pages:
+    # só publica em push na main E se os testes passaram
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main' && needs.e2e.result == 'success'
     needs: e2e
-    if: ${{ needs.e2e.result == 'success' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
-      # Baixa o relatório gerado no job anterior
       - name: Download Allure Report artifact
         uses: actions/download-artifact@v4
         with:
           name: allure-report
           path: allure-report
 
-      # Publica no branch gh-pages
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-           github_token: ${{ secrets.GITHUB_TOKEN }}
-           publish_branch: gh-pages
-           publish_dir: allure-report
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: allure-report
