--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -5,73 +5,95 @@ on:
     branches: ["main"]
   pull_request:
     branches: ["main"]
+  schedule:
+    - cron: "0 2 * * *" # 02:00 UTC -> nightly FULL
 
 permissions:
   contents: write
+  pages: write
+  id-token: write
 
 jobs:
-  e2e:
+  smoke:
+    name: "Smoke (tags: smoke) • CI"
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v4
+      - name: Node 18 + cache
+        uses: actions/setup-node@v4
         with:
           node-version: 18
+          cache: npm
 
       - name: Install deps
         run: npm ci || npm i
 
-      # Debug opcional: lista suas pastas e specs
-      - name: List repo files (debug)
+      # restaurar histórico p/ Allure Trend (se existir)
+      - name: Restore Allure history
         run: |
-          pwd
-          ls -la
-          echo "--- cypress-tests ---"
-          ls -R cypress-tests || true
+          git fetch origin gh-pages:gh-pages || true
+          mkdir -p allure-results/history
+          if git show gh-pages:history >/dev/null 2>&1; then
+            git show gh-pages:history > history.zip
+            unzip -o history.zip -d allure-results || true
+          fi
 
-      # Roda Cypress (gera allure-results por causa do plugin)
-      - name: Run Cypress
-        uses: cypress-io/github-action@v6
-        with:
-          spec: "cypress-tests/e2e/**/*.cy.js"
+      - name: Run Cypress (smoke only)
+        run: npx cypress run --env allure=true,grepTags=smoke
 
-      # Gera HTML do Allure
-      - name: Generate Allure Report
+      - name: Generate Allure report
+        run: npx allure-commandline generate allure-results --clean -o allure-report
+
+      - name: Save Allure history
         run: |
-          npx allure generate ./allure-results --clean -o ./allure-report
-          touch ./allure-report/.nojekyll
+          cp -r allure-report/history . || true
+          # exporta history para reuso em próximos runs
+          (cd allure-report && zip -r ../history.zip history >/dev/null) || true
+          git config user.email "actions@github.com"
+          git config user.name "github-actions[bot]"
+          git checkout --orphan gh-pages-temp
+          mkdir -p .
+          mv history.zip history || true
+          git add history || true
+          git commit -m "chore: update allure history [ci skip]" || true
+          git push -f origin gh-pages-temp:gh-pages || true
 
-      # Guarda os artefatos (sempre útil para baixar)
-      - name: Upload Allure Results
-        uses: actions/upload-artifact@v4
+      - name: Upload artifact to Pages
+        uses: actions/upload-pages-artifact@v3
         with:
-          name: allure-results
-          path: allure-results
-
-      - name: Upload Allure Report (HTML)
-        uses: actions/upload-artifact@v4
-        with:
-          name: allure-report
-          path: allure-report
-
-  deploy-pages:
-    # só publica em push na main E se os testes passaram
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main' && needs.e2e.result == 'success'
-    needs: e2e
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Download Allure Report artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: allure-report
           path: allure-report
 
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+        uses: actions/deploy-pages@v4
+
+  full:
+    name: Full Suite (nightly)
+    if: github.event_name == 'schedule'
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Node 18 + cache
+        uses: actions/setup-node@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_branch: gh-pages
-          publish_dir: allure-report
+          node-version: 18
+          cache: npm
+
+      - name: Install deps
+        run: npm ci || npm i
+
+      - name: Run Cypress (full)
+        run: npx cypress run --env allure=true
+
+      - name: Generate Allure report
+        run: npx allure-commandline generate allure-results --clean -o allure-report
+
+      - name: Upload Allure (artifact)
+        uses: actions/upload-artifact@v4
+        with:
+          name: allure-report-full
+          path: allure-report
+          retention-days: 7
