--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -2,98 +2,113 @@ name: Cypress
 
 on:
   push:
-    branches: ["main"]
-  pull_request:
-    branches: ["main"]
+    branches: [ main ]
   schedule:
-    - cron: "0 2 * * *" # 02:00 UTC -> nightly FULL
-
-permissions:
-  contents: write
-  pages: write
-  id-token: write
+    - cron: "0 3 * * *"   # Nightly às 03:00 UTC
+  workflow_dispatch:
 
 jobs:
   smoke:
-    name: "Smoke (tags: smoke) • CI"
+    name: Smoke (tags=smoke)
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: Node 18 + cache
+      - name: Node 18.18 + cache
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 18.18.0
           cache: 'npm'
+          cache-dependency-path: package-lock.json
+
+      # evita erro do --loader que algumas libs transitivas injetam via NODE_OPTIONS
+      - name: Clear NODE_OPTIONS (evita erro do --loader)
+        run: echo "NODE_OPTIONS=" >> $GITHUB_ENV
 
       - name: Install deps
-        run: npm ci || npm i
+        run: npm ci
 
-      # restaurar histórico p/ Allure Trend (se existir)
-      - name: Restore Allure history
+      - name: Show versions
         run: |
-          git fetch origin gh-pages:gh-pages || true
-          mkdir -p allure-results/history
-          if git show gh-pages:history >/dev/null 2>&1; then
-            git show gh-pages:history > history.zip
-            unzip -o history.zip -d allure-results || true
-          fi
+          node -v
+          npm -v
+          npx cypress --version
 
       - name: Run Cypress (smoke only)
         run: npx cypress run --env allure=true,grepTags=smoke
 
-      - name: Generate Allure report
-        run: npx allure-commandline generate allure-results --clean -o allure-report
-
-      - name: Save Allure history
+      - name: Generate Allure
         run: |
-          cp -r allure-report/history . || true
-          # exporta history para reuso em próximos runs
-          (cd allure-report && zip -r ../history.zip history >/dev/null) || true
-          git config user.email "actions@github.com"
-          git config user.name "github-actions[bot]"
-          git checkout --orphan gh-pages-temp
-          mkdir -p .
-          mv history.zip history || true
-          git add history || true
-          git commit -m "chore: update allure history [ci skip]" || true
-          git push -f origin gh-pages-temp:gh-pages || true
+          npm run allure:generate
+          touch allure-report/.nojekyll
 
-      - name: Upload artifact to Pages
+      - name: Upload allure artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: allure-report
+          path: allure-report
+
+  deploy-pages:
+    name: Deploy Allure to GitHub Pages
+    needs: smoke
+    if: ${{ github.ref == 'refs/heads/main' }}
+    runs-on: ubuntu-latest
+    permissions:
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    steps:
+      - name: Download allure artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: allure-report
+
+      - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: allure-report
 
-      - name: Deploy to GitHub Pages
+      - name: Deploy to Pages
+        id: deployment
         uses: actions/deploy-pages@v4
 
   full:
     name: Full Suite (nightly)
-    if: github.event_name == 'schedule'
+    if: ${{ github.event_name == 'schedule' }}
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: Node 18 + cache
+      - name: Node 18.18 + cache
         uses: actions/setup-node@v4
         with:
-          node-version: 18
-          cache: npm
+          node-version: 18.18.0
+          cache: 'npm'
+          cache-dependency-path: package-lock.json
+
+      - name: Clear NODE_OPTIONS (evita erro do --loader)
+        run: echo "NODE_OPTIONS=" >> $GITHUB_ENV
 
       - name: Install deps
-        run: npm ci || npm i
+        run: npm ci
 
-      - name: Run Cypress (full)
+      - name: Run Cypress (full suite)
         run: npx cypress run --env allure=true
 
-      - name: Generate Allure report
-        run: npx allure-commandline generate allure-results --clean -o allure-report
+      - name: Generate Allure
+        run: |
+          npm run allure:generate
+          touch allure-report/.nojekyll
 
-      - name: Upload Allure (artifact)
+      - name: Upload allure artifact
         uses: actions/upload-artifact@v4
         with:
-          name: allure-report-full
+          name: allure-report
           path: allure-report
-          retention-days: 7
